gatling scripts for performance tuning